Fixed buttons size and spacing.

--- a/style.css
+++ b/style.css
@@ -100,14 +100,24 @@ div form label{
   align-items: center;  
 }
 
+#buildAmazing form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 #buildAmazing .see-plans {
   background-color: #FB3B49;
   box-shadow: 8px 8px 0 rgba(251,59,73,.2);
+  margin: 25px;
+  padding: 10px 30px 10px 30px;
   color: white;
 }
 
 #buildAmazing .join {
   background-color: rgba(232,217,217,.3);
+  margin: 25px;
+  padding: 10px 30px 10px 30px;
   color: black;
 }
 
